# advent-of-code-2022

./: README.md
fsharp/: README.md  advent.sln
fsharp/advent/: advent.fsproj
fsharp/advent/advent/: Program.fs  advent.fsproj
fsharp/advent/advent/challenges/: day_2.fs  day_3.fs
fsharp/advent/challenges/: day_1.fs  day_4.fs
fsharp/advent/common/: file_utils.fs
python/: Dockerfile  README.md  pyproject.toml
python/.devcontainer/: devcontainer.env  devcontainer.json
python/advent/: __main__.py  cli.py
python/advent/challenges/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py
python/advent/common/: file_utils.py  parts.py
