[tool.poetry]
name = "advent-of-code-2022"
version = "1.0.0"
description = "Advent of Code 2022 Python implementation"
authors = ["BeardedPlatypus"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
typer = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
