[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["BeardedPlatypus <you@example.com>"]
readme = "README.md"
packages = [
    { include = "advent" }
]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
